--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register",
     "build": "rimraf dist/ && babel -d dist/ src/",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2"
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
