--- a/package.json
+++ b/package.json
@@ -26,30 +26,30 @@
   },
   "homepage": "https://github.com/giantmachines/redux-websocket#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-object-rest-spread": "^6.19.0",
-    "babel-preset-es2015": "^6.18.0",
-    "chai": "^3.5.0",
-    "eslint": "^3.10.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-flowtype": "^2.25.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.6.0",
-    "expect": "^1.20.2",
-    "flow-bin": "^0.36.0",
-    "mocha": "^5.2.0",
-    "mocha-phantomjs": "^4.1.0",
-    "redux": "^3.6.0",
-    "redux-mock-store": "^1.2.1",
-    "sinon": "^1.17.6",
-    "testdouble": "^1.9.0",
-    "ws": "^1.1.1"
+    "babel-cli": "6.18.0",
+    "babel-core": "6.18.2",
+    "babel-eslint": "7.1.1",
+    "babel-plugin-transform-flow-strip-types": "6.18.0",
+    "babel-plugin-transform-object-rest-spread": "6.19.0",
+    "babel-preset-es2015": "6.18.0",
+    "chai": "3.5.0",
+    "eslint": "3.10.2",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-plugin-flowtype": "2.25.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.6.0",
+    "expect": "1.20.2",
+    "flow-bin": "0.36.0",
+    "mocha": "5.2.0",
+    "mocha-phantomjs": "4.1.0",
+    "redux": "3.6.0",
+    "redux-mock-store": "1.2.1",
+    "sinon": "1.17.6",
+    "testdouble": "1.9.0",
+    "ws": "1.1.1"
   },
   "dependencies": {
-    "lodash": "^4.17.2"
+    "lodash": "4.17.2"
   }
 }
