--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/giantmachines/redux-websocket#readme",
   "devDependencies": {
-    "babel-cli": "6.18.0",
+    "babel-cli": "6.26.0",
     "babel-core": "6.18.2",
     "babel-eslint": "7.1.1",
     "babel-plugin-transform-flow-strip-types": "6.18.0",
@@ -46,10 +46,9 @@
     "redux": "3.6.0",
     "redux-mock-store": "1.2.1",
     "sinon": "1.17.6",
-    "testdouble": "1.9.0",
-    "ws": "1.1.1"
+    "testdouble": "3.8.2"
   },
   "dependencies": {
-    "lodash": "4.17.2"
+    "lodash": "4.17.11"
   }
 }
