--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.3.0",
   "description": "A redux middleware to handle websocket connections",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register",
-    "build": "rimraf dist/ && babel -d dist/ src/",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "prepare": "npm run build"
+    "build": "rimraf dist/ && tsc",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,26 +31,17 @@
   },
   "homepage": "https://github.com/giantmachines/redux-websocket#readme",
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.18.2",
-    "babel-eslint": "7.1.1",
-    "babel-plugin-transform-flow-strip-types": "6.18.0",
-    "babel-plugin-transform-object-rest-spread": "6.19.0",
-    "babel-preset-es2015": "6.18.0",
-    "chai": "3.5.0",
-    "eslint": "3.10.2",
-    "eslint-config-airbnb": "13.0.0",
-    "eslint-plugin-flowtype": "2.25.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.6.0",
-    "expect": "1.20.2",
-    "flow-bin": "0.36.0",
-    "mocha": "5.2.0",
-    "redux": "3.6.0",
-    "redux-mock-store": "1.2.1",
-    "sinon": "1.17.6",
-    "testdouble": "3.8.2"
+    "@types/jest": "24.0.1",
+    "@types/lodash": "4.14.120",
+    "jest": "24.1.0",
+    "prettier": "1.16.4",
+    "redux": "4.0.1",
+    "redux-mock-store": "1.5.3",
+    "rimraf": "2.6.3",
+    "ts-jest": "23.10.5",
+    "tslint": "5.12.1",
+    "tslint-config-prettier": "1.18.0",
+    "typescript": "3.3.3"
   },
   "dependencies": {
     "lodash": "4.17.11"
