--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.3.0",
   "description": "A redux middleware to handle websocket connections",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "index.d.ts",
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "index.d.ts"
   ],
   "directories": {
     "test": "test"
