--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@types/jest": "24.0.1",
     "@types/lodash": "4.14.120",
+    "@types/ws": "6.0.1",
     "jest": "24.1.0",
     "prettier": "1.16.4",
     "redux": "4.0.1",
