--- a/demo/package.json
+++ b/demo/package.json
@@ -20,9 +20,9 @@
   "devDependencies": {
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "awesome-typescript-loader": "5.2.1",
     "html-webpack-plugin": "3.2.0",
     "source-map-loader": "0.2.4",
-    "ts-loader": "5.3.3",
     "webpack": "4.29.3",
     "webpack-cli": "3.2.3",
     "webpack-dev-middleware": "3.5.2",
