--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@giantmachines/redux-websocket",
-  "version": "0.3.0",
+  "version": "0.3.1-0",
   "description": "A redux middleware to handle websocket connections",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
