--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   "files": [
     "dist/**/*"
   ],
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
     "build": "rimraf dist/ && tsc",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -26,15 +23,19 @@
   ],
   "author": "Giant Machines <contact@giantmachines.com> (https://giantmachines.com)",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/giantmachines/redux-websocket/issues"
-  },
-  "homepage": "https://github.com/giantmachines/redux-websocket#readme",
-  "devDependencies": {
+  "dependencies": {
+    "@babel/cli": "7.2.0",
+    "@babel/core": "7.2.0",
+    "@babel/plugin-proposal-class-properties": "7.2.1",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/preset-env": "7.2.0",
+    "@babel/preset-typescript": "7.1.0",
     "@types/jest": "24.0.1",
     "@types/lodash": "4.14.120",
     "@types/ws": "6.0.1",
+    "babel-loader": "8.0.4",
     "jest": "24.1.0",
+    "lodash": "4.17.11",
     "prettier": "1.16.4",
     "redux": "4.0.1",
     "redux-mock-store": "1.5.3",
@@ -42,9 +43,8 @@
     "ts-jest": "23.10.5",
     "tslint": "5.12.1",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.3.3"
-  },
-  "dependencies": {
-    "lodash": "4.17.11"
+    "typescript": "3.3.3",
+    "webpack": "4.29.3",
+    "webpack-cli": "3.2.3"
   }
 }
