--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "target": "es5",
+    "target": "esnext",
+    "module": "commonjs",
     "declaration": true,
+    "outDir": "dist",
     "strict": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "./src/**/*"
+  "exclude": [
+    "demo",
+    "dist"
   ]
 }
