--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf dist",
     "check-types": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src ./test",
     "prepare": "npm run build",
     "test": "jest"
   },
@@ -35,7 +35,19 @@
     "@types/jest": "24.0.1",
     "@types/lodash": "4.14.120",
     "@types/ws": "6.0.1",
+    "@typescript-eslint/eslint-plugin": "1.3.0",
     "babel-loader": "8.0.4",
+    "eslint": "5.12.1",
+    "eslint-config-airbnb-typescript": "1.1.0",
+    "eslint-config-prettier": "4.0.0",
+    "eslint-formatter-pretty": "2.1.1",
+    "eslint-plugin-eslint-comments": "3.0.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jest": "22.2.1",
+    "eslint-plugin-jsx-a11y": "6.2.0",
+    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-unicorn": "7.1.0",
     "jest": "24.1.0",
     "lodash": "4.17.11",
     "prettier": "1.16.4",
