--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@types/ws": "6.0.1",
     "@typescript-eslint/eslint-plugin": "1.3.0",
     "babel-loader": "8.0.4",
+    "eslint": "5.12.1",
     "eslint-config-airbnb-typescript": "1.1.0",
-    "eslint-config-prettier": "4.0.0",
     "eslint-formatter-pretty": "2.1.1",
     "eslint-plugin-eslint-comments": "3.0.1",
     "eslint-plugin-import": "2.16.0",
@@ -46,19 +46,14 @@
     "eslint-plugin-jsx-a11y": "6.2.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-unicorn": "7.1.0",
-    "eslint": "5.12.1",
     "jest": "24.1.0",
     "lodash": "4.17.11",
-    "prettier": "1.16.4",
-    "redux-mock-store": "1.5.3",
     "redux": "4.0.1",
+    "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
     "ts-jest": "23.10.5",
-    "tslint-config-prettier": "1.18.0",
-    "tslint": "5.12.1",
     "typescript": "3.3.3",
-    "webpack-cli": "3.2.3",
-    "webpack": "4.29.3"
+    "webpack": "4.29.3",
+    "webpack-cli": "3.2.3"
   }
 }
