--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf dist",
     "check-types": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src ./test",
+    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./demo ./src ./test",
     "prepare": "npm run build",
     "test": "jest"
   },
