--- a/demo/package.json
+++ b/demo/package.json
@@ -11,18 +11,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@giantmachines/redux-websocket": "^1.0.0-alpha",
     "express": "4.16.4",
+    "node-sass": "4.11.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
+    "react-redux": "6.0.0",
     "redux": "4.0.1",
+    "redux-devtools": "3.5.0",
+    "redux-devtools-inspector": "0.11.3",
+    "sass-loader": "7.1.0",
     "typescript": "3.3.3"
   },
   "devDependencies": {
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
     "awesome-typescript-loader": "5.2.1",
+    "css-loader": "2.1.0",
     "html-webpack-plugin": "3.2.0",
     "source-map-loader": "0.2.4",
+    "style-loader": "0.23.1",
     "webpack": "4.29.3",
     "webpack-cli": "3.2.3",
     "webpack-dev-middleware": "3.5.2",
