--- a/demo/package.json
+++ b/demo/package.json
@@ -13,16 +13,21 @@
   "dependencies": {
     "@giantmachines/redux-websocket": "^1.0.0-alpha",
     "express": "4.16.4",
+    "prismjs": "1.15.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
     "react-redux": "6.0.0",
     "redux": "4.0.1",
     "redux-devtools": "3.5.0",
-    "redux-devtools-inspector": "0.11.3"
+    "redux-devtools-inspector": "0.11.3",
+    "styled-components": "4.1.3"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.9.1",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@types/react-redux": "7.0.1",
+    "@types/styled-components": "4.1.10",
     "awesome-typescript-loader": "5.2.1",
     "css-loader": "2.1.0",
     "html-webpack-plugin": "3.2.0",
