--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -5,7 +5,14 @@
     "jsx": "react",
     "module": "commonjs",
     "sourceMap": true,
-    "target": "es5"
+    "target": "es5",
+    "types": [
+      "prismjs",
+      "react",
+      "react-dom",
+      "react-redux",
+      "styled-components"
+    ]
   },
   "include": [
     "./src/**/**/*"
