--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@giantmachines/redux-websocket",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "A redux middleware to handle websocket connections",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/bundle.js",
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist/**/*"
   ],
   "scripts": {
-    "build": "npm run clean && webpack",
+    "build": "npm run clean && npm run build:types && webpack",
+    "build:types": "tsc --emitDeclarationOnly --outdir dist/types",
     "clean": "rimraf dist",
     "check-types": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
