--- a/demo/package.json
+++ b/demo/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/webpack",
+    "build": "webpack --mode=production",
     "start": "webpack-dev-server --open --hot"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "@types/react-redux": "7.0.1",
     "@types/styled-components": "4.1.10",
     "awesome-typescript-loader": "5.2.1",
+    "clean-webpack-plugin": "2.0.1",
     "css-loader": "2.1.0",
     "html-webpack-plugin": "3.2.0",
     "node-sass": "4.11.0",
