--- a/demo/package.json
+++ b/demo/package.json
@@ -18,6 +18,8 @@
     "@types/react-redux": "7.0.1",
     "@types/styled-components": "4.1.10",
     "awesome-typescript-loader": "5.2.1",
+    "babel-core": "6.26.3",
+    "babel-plugin-styled-components": "1.10.0",
     "clean-webpack-plugin": "2.0.1",
     "css-loader": "2.1.0",
     "html-webpack-plugin": "3.2.0",
