--- a/demo/package.json
+++ b/demo/package.json
@@ -16,6 +16,7 @@
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
     "@types/react-redux": "7.0.1",
+    "@types/redux-devtools": "3.0.46",
     "@types/styled-components": "4.1.10",
     "awesome-typescript-loader": "5.2.1",
     "clean-webpack-plugin": "2.0.1",
