--- a/demo/package.json
+++ b/demo/package.json
@@ -16,13 +16,13 @@
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
     "@types/react-redux": "7.0.1",
-    "@types/redux-devtools": "3.0.46",
     "@types/styled-components": "4.1.10",
     "awesome-typescript-loader": "5.2.1",
     "clean-webpack-plugin": "2.0.1",
     "css-loader": "2.1.0",
     "html-webpack-plugin": "3.2.0",
     "node-sass": "4.11.0",
+    "polished": "3.1.0",
     "prismjs": "1.15.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
