--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "npm run clean && npm run build:types && webpack",
     "build:types": "tsc --emitDeclarationOnly --outdir dist/types",
+    "build:watch": "npm run build -- --watch",
     "clean": "rimraf dist",
     "check-types": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
