--- a/demo/package.json
+++ b/demo/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@giantmachines/redux-websocket": "1.0.0-alpha.2",
+    "@giantmachines/redux-websocket": "next",
     "@types/debounce": "1.2.0",
     "@types/prismjs": "1.9.1",
     "@types/react": "16.8.2",
