--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   ],
   "author": "Giant Machines <contact@giantmachines.com> (https://giantmachines.com)",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "@babel/cli": "7.2.0",
     "@babel/core": "7.2.0",
     "@babel/plugin-proposal-class-properties": "7.2.1",
