--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.1.0",
   "description": "A redux middleware to handle websocket connections",
   "main": "dist/bundle.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "files": [
     "dist/**/*"
   ],
   "scripts": {
     "build": "npm run clean && npm run build:types && webpack",
-    "build:types": "tsc --emitDeclarationOnly --outdir dist/types",
+    "build:types": "tsc --emitDeclarationOnly --outdir dist",
     "build:watch": "npm run build -- --watch",
     "clean": "rimraf dist",
     "check-types": "tsc --noEmit",
