--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es5",
     "module": "commonjs",
     "declaration": true,
     "outDir": "dist",
     "strict": true,
-    "allowSyntheticDefaultImports": true
+    "esModuleInterop": true,
   },
   "include": [
     "./src",
