--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Giant Machines <contact@giantmachines.com> (https://giantmachines.com)",
   "license": "MIT",
   "dependencies": {
+    "flux-standard-action": "2.1.0",
     "redux": "~4"
   },
   "devDependencies": {
