--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "author": "Giant Machines <contact@giantmachines.com> (https://giantmachines.com)",
   "license": "MIT",
   "dependencies": {
-    "flux-standard-action": "2.1.0",
     "redux": "~4"
   },
   "devDependencies": {
@@ -42,7 +41,6 @@
     "@types/ws": "6.0.1",
     "@typescript-eslint/eslint-plugin": "1.3.0",
     "babel-loader": "8.0.4",
-    "eslint": "5.12.1",
     "eslint-config-airbnb-typescript": "1.1.0",
     "eslint-formatter-pretty": "2.1.1",
     "eslint-plugin-eslint-comments": "3.0.1",
@@ -51,12 +49,14 @@
     "eslint-plugin-jsx-a11y": "6.2.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.12.4",
+    "eslint": "5.12.1",
+    "flux-standard-action": "2.1.0",
     "jest": "24.1.0",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
     "ts-jest": "24.0.1",
     "typescript": "3.3.3",
-    "webpack": "4.29.3",
-    "webpack-cli": "3.2.3"
+    "webpack-cli": "3.2.3",
+    "webpack": "4.29.3"
   }
 }
