Remove the tests directory from dist.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:types && webpack",
+    "build": "npm run clean && npm run build:types && webpack && rimraf dist/__tests__",
     "build:types": "tsc --emitDeclarationOnly --outdir dist",
     "build:watch": "npm run build -- --watch",
     "clean": "rimraf dist",
