--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,18 +2,24 @@ version: 2
 
 jobs:
   lint:
+    docker:
+      - image: circleci/node:4.8.2-jessie
     steps:
       - checkout
       - run: npm ci
       - run: npm run lint
 
   typescript:
+    docker:
+      - image: circleci/node:4.8.2-jessie
     steps:
       - checkout
       - run: npm ci
       - run: npm run check-types
 
   test:
+    docker:
+      - image: circleci/node:4.8.2-jessie
     steps:
       - checkout
       - run: npm ci
