--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,11 @@ jobs:
       - run: npm ci
       - run: npm test -- --coverage
       - run: bash <(curl -s https://codecov.io/bash) -f ./coverage/coverage-final.json
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - lint
+      - typescript
+      - test
