--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   lint:
     docker:
-      - image: circleci/node:4.8.2-jessie
+      - image: circleci/node:4.8.2
     steps:
       - checkout
       - run: npm ci
@@ -11,7 +11,7 @@ jobs:
 
   typescript:
     docker:
-      - image: circleci/node:4.8.2-jessie
+      - image: circleci/node:4.8.2
     steps:
       - checkout
       - run: npm ci
@@ -19,7 +19,7 @@ jobs:
 
   test:
     docker:
-      - image: circleci/node:4.8.2-jessie
+      - image: circleci/node:4.8.2
     steps:
       - checkout
       - run: npm ci
