--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run: npm ci
-      - run: cd demo & npm ci
+      - run: cd demo && npm ci && cd -
       - run: npm run lint
 
   typescript:
