--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "webpack-dev-server --open --hot"
+    "start": "webpack-dev-server --open --hot",
+    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src"
   },
   "keywords": [],
   "author": "",
