Revert "lint, format, test fixes"
This reverts commit dc224414e45f0df39a984ef239361b0562b1b1fe.

--- a/demo/package.json
+++ b/demo/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "webpack-dev-server --open --hot",
-    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src"
+    "start": "webpack-dev-server --open --hot"
   },
   "keywords": [],
   "author": "",
