--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "author": "Giant Machines <contact@giantmachines.com> (https://giantmachines.com)",
   "license": "MIT",
   "dependencies": {
-    "redux": "~4"
+    "redux": "~4",
+    "typesafe-actions": "4.4.2"
   },
   "devDependencies": {
     "@babel/cli": "7.2.0",
