--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf dist",
     "check-types": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty --ignore-path .gitignore ./src ./demo",
+    "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty --ignore-path .gitignore ./src",
     "prepare": "npm run build",
     "test": "jest --coverage"
   },
@@ -27,6 +27,7 @@
   "author": "Giant Machines <contact@giantmachines.com> (https://giantmachines.com)",
   "license": "MIT",
   "dependencies": {
+    "@typescript-eslint/parser": "2.25.0",
     "redux": "~4"
   },
   "devDependencies": {
@@ -38,17 +39,18 @@
     "@babel/preset-typescript": "7.1.0",
     "@types/jest": "24.0.1",
     "@types/ws": "6.0.1",
-    "@typescript-eslint/eslint-plugin": "1.3.0",
+    "@typescript-eslint/eslint-plugin": "2.25.0",
     "babel-loader": "8.0.4",
-    "eslint-config-airbnb-typescript": "1.1.0",
+    "eslint-config-airbnb-typescript": "7.2.0",
     "eslint-formatter-pretty": "2.1.1",
     "eslint-plugin-eslint-comments": "3.0.1",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jest": "22.2.1",
-    "eslint-plugin-jsx-a11y": "6.2.0",
-    "eslint-plugin-promise": "4.0.1",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jest": "23.8.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint": "5.12.1",
+    "eslint-plugin-react-hooks": "2.5.0",
+    "eslint": "6.8.0",
     "flux-standard-action": "2.1.0",
     "jest": "24.1.0",
     "redux-mock-store": "1.5.3",
