--- a/demo/package.json
+++ b/demo/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "webpack-dev-server --open --hot"
+    "start": "webpack-dev-server --open --hot",
+    "link": "cd .. && npm link && cd ./demo && npm i && npm link @giantmachines/redux-websocket",
+    "unlink": "npm unlink @giantmachines/redux-websocket && cd .. && npm unlink"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "7.4.4",
-    "@giantmachines/redux-websocket": "latest",
     "@types/debounce": "1.2.0",
     "@types/prismjs": "1.9.1",
     "@types/react": "16.8.2",
