--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-loader": "8.0.4",
     "eslint": "5.12.1",
     "eslint-config-airbnb-typescript": "1.1.0",
+    "eslint-config-prettier": "6.11.0",
     "eslint-formatter-pretty": "2.1.1",
     "eslint-plugin-eslint-comments": "3.0.1",
     "eslint-plugin-import": "2.16.0",
