feat: add validate script

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|tsx|json)\"",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore ./src ./demo",
     "prepare": "npm run build",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "validate": "npm run lint && npm run build"
   },
   "repository": {
     "type": "git",
