chore: DRY scripts, pass flags specific to commands

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "build:watch": "npm run clean && npm run build:types && webpack --watch",
     "clean": "rimraf dist",
     "check-types": "tsc --noEmit",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|tsx|json)\"",
-    "check-format": "prettier --ignore-path .gitignore --list-different \"**/*.+(js|ts|tsx|json)\"",
+    "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|ts|tsx|json)\"",
+    "format": "npm run prettier -- --write",
+    "check-format": "npm run prettier -- --list-different",
     "lint": "eslint --cache --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore ./src ./demo",
     "prepare": "npm run build",
     "test": "jest --coverage",
