--- a/demo/package.json
+++ b/demo/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "@babel/core": "7.4.4",
     "@giantmachines/redux-websocket": "latest",
+    "@reduxjs/toolkit": "^1.4.0",
     "@types/debounce": "1.2.0",
     "@types/prismjs": "1.9.1",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
-    "@types/react-redux": "7.0.1",
-    "@types/styled-components": "4.1.10",
+    "@types/react-redux": "7.1.9",
+    "@types/styled-components": "5.1.3",
     "awesome-typescript-loader": "5.2.1",
     "babel-plugin-styled-components": "1.10.0",
     "clean-webpack-plugin": "2.0.1",
@@ -33,15 +34,15 @@
     "prismjs": "1.15.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
-    "react-redux": "6.0.0",
+    "react-redux": "7.2.1",
     "redux": "4.0.1",
     "redux-devtools": "3.5.0",
     "redux-devtools-inspector": "0.11.3",
     "sass-loader": "7.1.0",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
-    "styled-components": "4.1.3",
-    "typescript": "3.3.3",
+    "styled-components": "5.2.0",
+    "typescript": "4.0.2",
     "webpack": "4.42.1",
     "webpack-cli": "3.2.3",
     "webpack-dev-server": "3.2.1",
