--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["es2015", "DOM"],
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
     "module": "commonjs",
