--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@babel/core": "7.4.4",
     "@giantmachines/redux-websocket": "latest",
-    "@reduxjs/toolkit": "^1.4.0",
+    "@reduxjs/toolkit": "1.4.0",
     "@types/debounce": "1.2.0",
     "@types/prismjs": "1.9.1",
     "@types/react": "16.8.2",
