--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   lint:
     docker:
-      - image: circleci/node:lts
+      - image: circleci/node:12
     steps:
       - checkout
       - run: npm ci
@@ -12,7 +12,7 @@ jobs:
 
   typescript:
     docker:
-      - image: circleci/node:lts
+      - image: circleci/node:12
     steps:
       - checkout
       - run: npm ci
@@ -20,7 +20,7 @@ jobs:
 
   format:
     docker:
-      - image: circleci/node:lts
+      - image: circleci/node:12
     steps:
       - checkout
       - run: npm ci
@@ -28,7 +28,7 @@ jobs:
 
   test:
     docker:
-      - image: circleci/node:lts
+      - image: circleci/node:12
     steps:
       - checkout
       - run: npm ci
