--- a/demo/package.json
+++ b/demo/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "7.4.4",
+    "@babel/polyfill": "^7.12.1",
     "@giantmachines/redux-websocket": "latest",
     "@reduxjs/toolkit": "1.4.0",
     "@types/debounce": "1.2.0",
