--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dist/**/*"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:types && webpack && rimraf dist/__tests__",
+    "build": "rollup --config rollup.config.ts --configPlugin typescript",
     "build:types": "tsc --emitDeclarationOnly --outdir dist",
-    "build:watch": "npm run clean && npm run build:types && webpack --watch",
+    "build:watch": "npm run clean && npm run build:types && tsc --watch",
     "clean": "rimraf dist",
     "check-types": "tsc --noEmit",
     "prettier": "prettier --ignore-path .gitignore \"**/*.+(js|ts|tsx|json)\"",
@@ -64,9 +64,9 @@
     "prettier": "2.0.5",
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
+    "rollup": "^2.70.1",
+    "rollup-plugin-typescript": "^1.0.1",
     "ts-jest": "24.0.1",
-    "typescript": "3.3.3",
-    "webpack": "4.29.3",
-    "webpack-cli": "3.2.3"
+    "typescript": "3.3.3"
   }
 }
